@@ -77,6 +77,28 @@ h2 {
     background-color: purple; /* placeholder */
 }
 
+/* board cell style */
+.cell {
+    background-color: white; /* placeholder */
+    font-size: 3rem;
+    cursor: pointer;
+}
+
+/* cell hover default color */
+.cell:hover {
+    background-color: lightgray; 
+}
+
+/* player 1 hover color */
+.board.player1-turn .cell:hover:empty {
+    background-color: lightcoral; /* placeholder */
+}
+
+/* player 2 hover color */
+.board.player2-turn .cell:hover:empty {
+    background-color: lightblue; /* placeholder */
+}
+
 /* new game button */
 .button {
     background-color: green; /*placeholder */
